[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/GameBoard.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.15, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(4000, 1000)

[node name="GameBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.06
theme_override_styles/panel = SubResource("1")

[node name="MenuButton" type="Button" parent="TopBar"]
anchor_left = 0.01
anchor_right = 0.08
anchor_top = 0.15
anchor_bottom = 0.85
text = "Menu"

[node name="SettingsButton" type="Button" parent="TopBar"]
anchor_left = 0.09
anchor_right = 0.16
anchor_top = 0.15
anchor_bottom = 0.85
text = "Settings"

[node name="GameTitle" type="Label" parent="TopBar"]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 20
text = "Tarot TCG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoardLayout" type="Control" parent="."]
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="OpponentArea" type="Control" parent="BoardLayout"]
anchor_right = 1.0
anchor_bottom = 0.3
modulate = Color(1, 0.9, 0.9, 1)
mouse_filter = 2

[node name="OpponentInfo" type="Panel" parent="BoardLayout/OpponentArea"]
anchor_left = 0.85
anchor_right = 0.98
anchor_top = 0.1
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("1")

[node name="Avatar" type="TextureRect" parent="BoardLayout/OpponentArea/OpponentInfo"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.05
anchor_bottom = 0.4
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="BoardLayout/OpponentArea/OpponentInfo"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.45
anchor_bottom = 0.6
theme_override_font_sizes/font_size = 20
text = "20/20"
horizontal_alignment = 1

[node name="FateLabel" type="Label" parent="BoardLayout/OpponentArea/OpponentInfo"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.65
anchor_bottom = 0.8
theme_override_font_sizes/font_size = 16
text = "Fate: 1/3"
horizontal_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="BoardLayout/OpponentArea"]
anchor_left = 0.2
anchor_right = 0.8
anchor_top = 0.3
anchor_bottom = 0.9
alignment = 1

[node name="DeckZone" type="Control" parent="BoardLayout/OpponentArea"]
anchor_left = 0.02
anchor_right = 0.15
anchor_top = 0.3
anchor_bottom = 0.9

[node name="Deck" type="Panel" parent="BoardLayout/OpponentArea/DeckZone"]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
theme_override_styles/panel = SubResource("1")

[node name="DeckLabel" type="Label" parent="BoardLayout/OpponentArea/DeckZone/Deck"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Deck
30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discard" type="Panel" parent="BoardLayout/OpponentArea/DeckZone"]
anchor_right = 0.5
anchor_bottom = 0.8
theme_override_styles/panel = SubResource("1")
modulate = Color(0.7, 0.7, 0.7, 0.8)

[node name="DiscardLabel" type="Label" parent="BoardLayout/OpponentArea/DeckZone/Discard"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Discard
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterArea" type="Control" parent="BoardLayout"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
mouse_filter = 2

[node name="OpponentBoard" type="HBoxContainer" parent="BoardLayout/CenterArea"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 0.45
alignment = 1
mouse_filter = 2

[node name="PlayerBoard" type="HBoxContainer" parent="BoardLayout/CenterArea"]
anchor_left = 0.2
anchor_right = 0.8
anchor_top = 0.55
anchor_bottom = 1.0
alignment = 1
mouse_filter = 1
__meta__ = {"drop_zone": "board"}

[node name="DropZoneIndicator" type="Panel" parent="BoardLayout/CenterArea/PlayerBoard"]
visible = false
modulate = Color(1, 1, 1, 0.3)
custom_minimum_size = Vector2(800, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PhaseIndicator" type="Panel" parent="BoardLayout/CenterArea"]
anchor_left = 0.02
anchor_right = 0.15
anchor_top = 0.4
anchor_bottom = 0.6
theme_override_styles/panel = SubResource("1")

[node name="PhaseLabel" type="Label" parent="BoardLayout/CenterArea/PhaseIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
text = "Main"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnIndicator" type="Panel" parent="BoardLayout/CenterArea"]
anchor_left = 0.85
anchor_right = 0.98
anchor_top = 0.4
anchor_bottom = 0.6
theme_override_styles/panel = SubResource("1")

[node name="TurnLabel" type="Label" parent="BoardLayout/CenterArea/TurnIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
text = "Turn 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerArea" type="Control" parent="BoardLayout"]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PlayerInfo" type="Panel" parent="BoardLayout/PlayerArea"]
anchor_left = 0.02
anchor_right = 0.15
anchor_top = 0.1
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("1")

[node name="Avatar" type="TextureRect" parent="BoardLayout/PlayerArea/PlayerInfo"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.05
anchor_bottom = 0.4
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="BoardLayout/PlayerArea/PlayerInfo"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.45
anchor_bottom = 0.6
theme_override_font_sizes/font_size = 20
text = "20/20"
horizontal_alignment = 1

[node name="FateLabel" type="Label" parent="BoardLayout/PlayerArea/PlayerInfo"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.65
anchor_bottom = 0.8
theme_override_font_sizes/font_size = 16
text = "Fate: 1/3"
horizontal_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="BoardLayout/PlayerArea"]
anchor_left = 0.2
anchor_right = 0.8
anchor_top = 0.1
anchor_bottom = 0.9
alignment = 1
mouse_filter = 1

[node name="HandToggleButton" type="Button" parent="BoardLayout/PlayerArea"]
anchor_left = 0.45
anchor_right = 0.55
anchor_top = 0.02
anchor_bottom = 0.08
text = "▼ Hide Hand"

[node name="DeckZone" type="Control" parent="BoardLayout/PlayerArea"]
anchor_left = 0.85
anchor_right = 0.98
anchor_top = 0.1
anchor_bottom = 0.9

[node name="Deck" type="Panel" parent="BoardLayout/PlayerArea/DeckZone"]
anchor_right = 0.4
anchor_top = 0.2
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="DeckLabel" type="Label" parent="BoardLayout/PlayerArea/DeckZone/Deck"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Deck
30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discard" type="Panel" parent="BoardLayout/PlayerArea/DeckZone"]
anchor_left = 0.6
anchor_right = 1.0
anchor_top = 0.2
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")
modulate = Color(0.7, 0.7, 0.7, 0.8)

[node name="DiscardLabel" type="Label" parent="BoardLayout/PlayerArea/DeckZone/Discard"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Discard
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="BoardLayout/PlayerArea"]
anchor_left = 0.88
anchor_right = 0.98
anchor_bottom = 0.15
text = "End Turn"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Quit to Menu"
size = Vector2i(400, 150)
dialog_text = "Are you sure you want to quit to menu?"

[node name="SettingsPanel" type="AcceptDialog" parent="."]
visible = false
title = "Settings"
size = Vector2i(500, 400)
dialog_text = "Settings Panel (Placeholder)

• Sound Volume: [====----] 50%
• Music Volume: [========] 100%
• Card Animations: ✓ Enabled
• Auto End Turn: ✗ Disabled
• Show Timer: ✓ Enabled

More settings will be added later."

[node name="CardPreview" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background" type="ColorRect" parent="CardPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="CardPreview"]
anchor_left = 0.35
anchor_top = 0.2
anchor_right = 0.65
anchor_bottom = 0.8
theme_override_styles/panel = SubResource("1")

[node name="VBox" type="VBoxContainer" parent="CardPreview/Panel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="CardName" type="Label" parent="CardPreview/Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 24
text = "Card Name"
horizontal_alignment = 1

[node name="CardImage" type="TextureRect" parent="CardPreview/Panel/VBox"]
custom_minimum_size = Vector2(0, 200)
stretch_mode = 5

[node name="Description" type="RichTextLabel" parent="CardPreview/Panel/VBox"]
custom_minimum_size = Vector2(0, 150)
bbcode_enabled = true
text = "Card description goes here..."

[node name="CloseButton" type="Button" parent="CardPreview/Panel/VBox"]
text = "Close"

[node name="DropZoneArea" type="Area2D" parent="BoardLayout/CenterArea/PlayerBoard"]
__meta__ = {"drop_zone": "board"}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoardLayout/CenterArea/PlayerBoard/DropZoneArea"]
shape = SubResource("2")